--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,11 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+  }
+
+  @screen md {
+    body {
+      background-attachment: fixed;
+    }
   }
 }
